# RealLift

./: .gitignore  MANIFEST.in  README.md  ROADMAP.md  demo_reallift.ipynb  pyproject.toml  reallift_preprint.tex  requirements.txt
.github/workflows/: compile-latex.yml  publish-pypi.yml  publish.yml
docs/: DoEResult.md  ExperimentResult.md  GeoExperiment.clean.md  GeoExperiment.design.md  GeoExperiment.generate_data.md  GeoExperiment.md  GeoExperiment.run.md  RealLift.md
docs/geotest/en-us/articles/: reallift_overview.md  synthetic_error_ratio.md
docs/geotest/en-us/functions/: clean_geo_data.md  discover_geo_clusters.md  estimate_duration.md  generate_geo_data.md  generate_simulated_intervention.md  run_matched_did.md  run_placebo_tests.md  run_synthetic_control.md  validate_geo_clusters.md
docs/geotest/en-us/pipelines/: design_of_experiments.md  run_geo_experiment.md
docs/geotest/pt-br/articles/: reallift_overview.md  synthetic_error_ratio.md
docs/geotest/pt-br/functions/: clean_geo_data.md  (+10 more)
examples/: demo_geodata_post_test.csv  demo_geodata_pre_test.csv  demo_reallift.ipynb
examples/GeoExperiment/: GeoExperiment-Quickstart.ipynb
examples/geotests/: demo_geodata_post_test.csv  demo_geodata_pre_test.csv  demo_geolift.ipynb  demo_geolift_design_of_experiments.ipynb  demo_geolift_design_of_experiments_steps.ipynb  demo_geolift_running_geo_experiment.ipynb  demo_geolift_running_geo_experiment_steps.ipynb  demo_geolift_running_geo_requirements.ipynb  demo_geolift_running_geo_requirements_steps.ipynb  demo_quick_start.ipynb  demo_simulate_geodata.ipynb
reallift/: __init__.py  base.py  core.py
reallift/config/: defaults.py
reallift/geo/: __init__.py  _bootstrap.py  _design.py  _did.py  _discovery.py  _duration.py  _experiment.py  _placebo.py  _reporting.py  _shared.py  _simulation.py  _synthetic.py  _validation.py  bootstrap.py  did.py  discovery.py  duration.py  experiment.py  placebo.py  results.py  split.py  synthetic.py  validation.py
reallift/pipelines/: __init__.py  design.py  experiment.py  geo_pipeline.py  reporting.py  shared.py  simulation.py
reallift/simulation/: __init__.py  geo_simulation.py
reallift/types/: schemas.py
reallift/utils/: __init__.py  data_cleaning.py  metrics.py  preprocessing.py  reporting.py
(+3 files in other folders)
