[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reallift"
version = "0.3.2"
description = "Causal Inference Library for Lift Measurement"
authors = [
    {name = "Roberto Junior", email = "robertocarlosifrj@gmail.com"},
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "cvxpy>=1.3.0",
    "tqdm>=4.67.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/RobertoJuniorWXYZ/RealLift"
Repository = "https://github.com/RobertoJuniorWXYZ/RealLift.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["reallift*"]